# CollectorConfigEditor

./: CMakeLists.txt
src/: Console.cpp  Console.h  HttpServer.cpp  HttpServer.h  Menu.cpp  Menu.h  NetworkManager.cpp  NetworkManager.h  PollTarget.cpp  PollTarget.h  fileStorage.cpp  fileStorage.h  jsonSerializer.cpp  jsonSerializer.h  main.cpp
web/: app.js  index.html
